--- a/Tamagotchi App/App/Views/Base.lproj/Main.storyboard
+++ b/Tamagotchi App/App/Views/Base.lproj/Main.storyboard
@@ -92,24 +92,141 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jSV-eB-K85">
-                                <rect key="frame" x="39.333333333333343" y="213" width="314.33333333333326" height="426"/>
+                                <rect key="frame" x="39.333333333333343" y="200.33333333333334" width="314.33333333333326" height="451.33333333333326"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3t0-sK-nXI">
+                                        <rect key="frame" x="0.0" y="0.0" width="314.33333333333331" height="392.66666666666669"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="M3R-Pi-ebp">
+                                                <rect key="frame" x="98.333333333333314" y="55.000000000000007" width="117.66666666666669" height="117.66666666666669"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="M3R-Pi-ebp" secondAttribute="height" multiplier="1:1" id="xnB-hW-hr8"/>
+                                                </constraints>
+                                            </imageView>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="InZ-yZ-hEn">
+                                                <rect key="frame" x="127.66666666666664" y="180.66666666666666" width="59.3333333333333" height="38.333333333333343"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D48-B8-rKX">
+                                                        <rect key="frame" x="9" y="8.9999999999999982" width="41.333333333333336" height="20.333333333333329"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="bottom" secondItem="D48-B8-rKX" secondAttribute="bottom" constant="9" id="2BX-lx-lYw"/>
+                                                    <constraint firstItem="D48-B8-rKX" firstAttribute="leading" secondItem="InZ-yZ-hEn" secondAttribute="leading" constant="9" id="Ppm-pz-APd"/>
+                                                    <constraint firstItem="D48-B8-rKX" firstAttribute="top" secondItem="InZ-yZ-hEn" secondAttribute="top" constant="9" id="QpE-vU-rmq"/>
+                                                    <constraint firstAttribute="trailing" secondItem="D48-B8-rKX" secondAttribute="trailing" constant="9" id="ygB-nD-Gwc"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bjS-aB-uiP">
+                                                <rect key="frame" x="54.999999999999986" y="240.99999999999997" width="204.33333333333331" height="1"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="1" id="aoN-7m-Fhx"/>
+                                                </constraints>
+                                            </view>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Ek-uC-V8k">
+                                                <rect key="frame" x="54.999999999999986" y="264" width="204.33333333333331" height="20.333333333333314"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="InZ-yZ-hEn" firstAttribute="centerX" secondItem="M3R-Pi-ebp" secondAttribute="centerX" id="8Y5-5a-Bx1"/>
+                                            <constraint firstItem="7Ek-uC-V8k" firstAttribute="width" secondItem="3t0-sK-nXI" secondAttribute="width" multiplier="0.65" id="8w2-3z-FRe"/>
+                                            <constraint firstItem="M3R-Pi-ebp" firstAttribute="top" secondItem="3t0-sK-nXI" secondAttribute="top" constant="55" id="ICu-Ry-aZw"/>
+                                            <constraint firstItem="bjS-aB-uiP" firstAttribute="centerX" secondItem="3t0-sK-nXI" secondAttribute="centerX" id="NwD-7D-bPH"/>
+                                            <constraint firstItem="bjS-aB-uiP" firstAttribute="top" secondItem="InZ-yZ-hEn" secondAttribute="bottom" constant="22" id="R12-pF-mdg"/>
+                                            <constraint firstItem="bjS-aB-uiP" firstAttribute="width" secondItem="3t0-sK-nXI" secondAttribute="width" multiplier="0.65" id="UCh-qT-ck2"/>
+                                            <constraint firstItem="M3R-Pi-ebp" firstAttribute="centerX" secondItem="3t0-sK-nXI" secondAttribute="centerX" id="ahv-ME-yJW"/>
+                                            <constraint firstItem="M3R-Pi-ebp" firstAttribute="height" secondItem="3t0-sK-nXI" secondAttribute="height" multiplier="0.3" id="cBE-Lc-7JQ"/>
+                                            <constraint firstItem="InZ-yZ-hEn" firstAttribute="top" secondItem="M3R-Pi-ebp" secondAttribute="bottom" constant="8" id="gw6-QV-BPM"/>
+                                            <constraint firstItem="7Ek-uC-V8k" firstAttribute="centerX" secondItem="3t0-sK-nXI" secondAttribute="centerX" id="oqu-eS-3Pb"/>
+                                            <constraint firstItem="7Ek-uC-V8k" firstAttribute="top" secondItem="bjS-aB-uiP" secondAttribute="bottom" constant="22" id="rUR-sm-Tsh"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rcv-lD-W9o">
+                                        <rect key="frame" x="0.0" y="392.66666666666663" width="314.33333333333331" height="1"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="PA4-ym-Jqo"/>
+                                        </constraints>
+                                    </view>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="9IY-pq-fyb">
+                                        <rect key="frame" x="0.0" y="392.66666666666663" width="314.33333333333331" height="58.666666666666686"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D8g-HT-dSm">
+                                                <rect key="frame" x="0.0" y="0.0" width="157.33333333333334" height="58.666666666666664"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eub-3k-f54">
+                                                <rect key="frame" x="157.33333333333331" y="0.0" width="157" height="58.666666666666664"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="D8g-HT-dSm" firstAttribute="top" secondItem="9IY-pq-fyb" secondAttribute="top" id="UTP-Lm-bpr"/>
+                                            <constraint firstAttribute="bottom" secondItem="D8g-HT-dSm" secondAttribute="bottom" id="ZMl-8b-5U2"/>
+                                            <constraint firstAttribute="bottom" secondItem="eub-3k-f54" secondAttribute="bottom" id="d6R-v4-Ad3"/>
+                                            <constraint firstItem="eub-3k-f54" firstAttribute="top" secondItem="9IY-pq-fyb" secondAttribute="top" id="m1m-Qn-VTQ"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="9IY-pq-fyb" firstAttribute="leading" secondItem="jSV-eB-K85" secondAttribute="leading" id="1yK-Hi-ZNf"/>
+                                    <constraint firstAttribute="bottom" secondItem="9IY-pq-fyb" secondAttribute="bottom" id="8lT-tm-tIg"/>
+                                    <constraint firstAttribute="trailing" secondItem="9IY-pq-fyb" secondAttribute="trailing" id="8pU-vu-RWe"/>
+                                    <constraint firstItem="Rcv-lD-W9o" firstAttribute="leading" secondItem="jSV-eB-K85" secondAttribute="leading" id="GFq-Qf-Pho"/>
+                                    <constraint firstItem="3t0-sK-nXI" firstAttribute="top" secondItem="jSV-eB-K85" secondAttribute="top" id="J1S-3k-bSe"/>
+                                    <constraint firstItem="Rcv-lD-W9o" firstAttribute="top" secondItem="3t0-sK-nXI" secondAttribute="bottom" id="JY7-jF-HTZ"/>
+                                    <constraint firstAttribute="trailing" secondItem="Rcv-lD-W9o" secondAttribute="trailing" id="gq4-4L-EdC"/>
+                                    <constraint firstAttribute="trailing" secondItem="3t0-sK-nXI" secondAttribute="trailing" id="n9r-Ov-wxi"/>
+                                    <constraint firstItem="3t0-sK-nXI" firstAttribute="height" secondItem="jSV-eB-K85" secondAttribute="height" multiplier="0.87" id="qXu-N1-w8R"/>
+                                    <constraint firstItem="3t0-sK-nXI" firstAttribute="leading" secondItem="jSV-eB-K85" secondAttribute="leading" id="tha-fq-UZD"/>
+                                    <constraint firstItem="9IY-pq-fyb" firstAttribute="top" secondItem="Rcv-lD-W9o" secondAttribute="top" id="z8B-LG-nQu"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="LUg-N3-Sut"/>
                         <color key="backgroundColor" white="0.0" alpha="0.19707160596026491" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="jSV-eB-K85" firstAttribute="centerY" secondItem="00g-B7-fEK" secondAttribute="centerY" id="13o-MC-HCU"/>
                             <constraint firstItem="jSV-eB-K85" firstAttribute="width" secondItem="00g-B7-fEK" secondAttribute="width" multiplier="0.8" id="OYm-vu-ojg"/>
                             <constraint firstItem="jSV-eB-K85" firstAttribute="centerX" secondItem="00g-B7-fEK" secondAttribute="centerX" id="c0H-EY-tJm"/>
-                            <constraint firstItem="jSV-eB-K85" firstAttribute="height" secondItem="00g-B7-fEK" secondAttribute="height" multiplier="0.5" id="fnE-eu-j1u"/>
+                            <constraint firstItem="jSV-eB-K85" firstAttribute="height" secondItem="00g-B7-fEK" secondAttribute="height" multiplier="0.53" id="fnE-eu-j1u"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="dwV-AX-4LV" appends="YES" id="45g-SQ-hlp"/>
+                        </connections>
                     </view>
                     <connections>
+                        <outlet property="cancelButton" destination="D8g-HT-dSm" id="VDp-0U-0BQ"/>
                         <outlet property="modalBackView" destination="jSV-eB-K85" id="jXn-OZ-fTc"/>
+                        <outlet property="modalInnerView" destination="3t0-sK-nXI" id="i58-Fg-MdR"/>
+                        <outlet property="startButton" destination="eub-3k-f54" id="x4H-03-yFU"/>
+                        <outlet property="tamagotchiImageView" destination="M3R-Pi-ebp" id="Rkh-6I-7a4"/>
+                        <outlet property="tamagotchiMessageLabel" destination="7Ek-uC-V8k" id="hGG-EY-6n8"/>
+                        <outlet property="tamagotchiNameLabel" destination="D48-B8-rKX" id="pAz-lc-QTv"/>
+                        <outlet property="tamagotchiNameView" destination="InZ-yZ-hEn" id="ggS-f3-PIu"/>
+                        <outletCollection property="dividers" destination="Rcv-lD-W9o" collectionClass="NSMutableArray" id="hzL-3f-0DA"/>
+                        <outletCollection property="dividers" destination="bjS-aB-uiP" collectionClass="NSMutableArray" id="Agf-7c-0ds"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DLz-uh-kMq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="dwV-AX-4LV">
+                    <connections>
+                        <action selector="handleTapGesture:" destination="cVj-jb-Crh" id="U27-vL-gpF"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1089" y="-2"/>
         </scene>
