--- a/Tamagotchi App/App/Views/Base.lproj/Main.storyboard
+++ b/Tamagotchi App/App/Views/Base.lproj/Main.storyboard
@@ -27,9 +27,13 @@
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mik-cf-U05">
                                 <rect key="frame" x="89" y="70.999999999999986" width="236" height="141.66666666666663"/>
+                                <gestureRecognizers/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="mik-cf-U05" secondAttribute="height" multiplier="5:3" id="NSN-UG-9AN"/>
                                 </constraints>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="tIv-g1-kac" appends="YES" id="ZqU-y8-0si"/>
+                                </connections>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BDz-qC-42p">
                                 <rect key="frame" x="105" y="136.66666666666666" width="204" height="0.0"/>
@@ -255,6 +259,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="tIv-g1-kac">
+                    <connections>
+                        <action selector="tapGesture:" destination="BYZ-38-t0r" id="DCT-Sl-f8h"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="153" y="-794"/>
         </scene>
